# jaxsnn

./: pyproject.toml
src/pyjaxsnn/jaxsnn/event/: from_nir.py  from_nir_data.py  to_nir_data.py
tests/sw/event/: test_nir.py
