[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxsnn"
dynamic = ["version"]
authors = [
  { name="Electronic Vision(s)", email="visions-dev@kip.uni-heidelberg.de" },
]
description = "jaxsnn is an event-based approach to machine-learning-inspired training and simulation of SNNs, including support for neuromorphic backends (BrainScaleS-2)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "jax==0.4.13; python_version=='3.8'",
  "jaxlib==0.4.13; python_version=='3.8'",
  # jaxlib is intentionally not listed: the jax package already depends on the
  # exact matching jaxlib, so pip resolves it transitively
  "jax; python_version>'3.8'",
  "scipy; python_version>'3.8'",
  "optax>=0.1.4",
  "tree-math>0.1.0",
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/electronicvisions/jaxsnn"
"Bug Tracker" = "https://github.com/electronicvisions/jaxsnn/issues"

[tool.setuptools.packages.find]
where = ["src/pyjaxsnn"]
include = ["jaxsnn*"]

[tool.setuptools_scm]
# Version is derived from git (tags + commit distance). When no git metadata
# is available (e.g. an sdist or a tag-less shallow clone), fall back to this.
fallback_version = "0.2.1"

